defmodule Elevator.CabOrders do
  @moduledoc """
  Module responsible for all changes occuring to the cab_order part of the state.
  """
  # TODO: Implement
end
