@startuml modules
title Modules
'
' Simple class diagram for the elevator modules

package Execution {
    interface Driver {
        + motor
        + lights
        + buttons
    }
    class StateMachine {
        - state
    }

    StateMachine --> Driver
}

class InfoGetter {
    + read_floor_sensor(): map
    + read_all_buttons(): map
}

class Scoring {
    + score_request(order, elevator_states): map
}

class StateDistributor {
    + broadcast_state(state)
    + receive_state() -> state
}

class CabOrders {
    - orders: map
    - version: uint64
    + update_orders(newOrders, version)
}

StateMachine --> Scoring : queries
StateMachine <--> StateDistributor
Driver --> InfoGetter : reads
StateDistributor ..> CabOrders : replicates

@enduml
